<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>village_li</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jindong@todo.todo">jindong</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <!-- This code line forces that village_interfaces must be compiled in advance, otherwise the compile of village_li may fail -->
  <!-- because village_li dependeds on service interface village_interfaces!!!-->
  <depend>village_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
